--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
   background: url('../public/otherImages/bg.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto 500vh;
 }
 
 *{
@@ -11,7 +11,7 @@ body{
   color: #66FCF1;
 }
 
-a{
+.pages{
   text-decoration: none;
 }
 
@@ -28,6 +28,7 @@ a{
   padding: 1vw;
   text-align: center;
   align-items: center;
+  background-image: linear-gradient(to right, rgba(102, 252, 241, 0), rgba(102, 252, 241, 0));
   transition: 1s;
   font-weight: bold;
 }
@@ -41,8 +42,13 @@ a{
   padding-left: 0vw !important;
 }
 
-.navbar .heading:hover, .navbar .navlogo a:hover{
+.navbar .heading:hover{
   background-image: linear-gradient(to right, rgba(102, 252, 241, 0.2), rgba(102, 252, 241, 1));
+  color: #1F2833;
+}
+
+.navbar .navlogo a:hover{
+  background-image: linear-gradient(to left, rgba(102, 252, 241, 0.2), rgba(102, 252, 241, 1));
   color: #1F2833;
 }
 
@@ -52,12 +58,13 @@ a{
 }
 
 .payhead{
-  width: 100vw;
+  width: 50vw;
   height: 10vw;
-  margin: 10vw 0vw;
+  margin: 10vw 25vw;
   color: white;
   padding: 3vw 0vw;
   text-align: center;
+  border-radius: 1vw;
   background-color: rgb(83, 200, 83);
 }
 
@@ -74,7 +81,21 @@ a{
   background-color: #66FCF1;
   color: #1F2833;
   font-size: 1.25vw;
-  border: 2px solid #66FCF1;
+  border: 0.1vw solid #66FCF1;
+  margin-top: 2vw;
+  font-weight: bold;
+  margin-left: 12vw;
+  width: 10vw;
+  padding: 0.5vw;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  transition: 0.5s;
+}
+
+.demoTitle{
+  background-color: #66FCF1;
+  color: #1F2833;
+  font-size: 1.25vw;
+  border: 0.1vw solid #66FCF1;
   margin-top: 2vw;
   font-weight: bold;
   margin-left: 12vw;
@@ -87,7 +108,7 @@ a{
 .form button:hover{
   background-color: #1F2833;
   color: #66FCF1;
-  border: 2px solid #66FCF1;
+  border: 0.1vw solid #66FCF1;
   box-shadow: #66FCF1 0 0 3vw 0.2vw;
 }
 
@@ -106,8 +127,71 @@ a{
   background-color: rgba(120, 120, 120, 0.1);
   padding: 1vw;
   border: 0;
-  border-bottom: 2px solid rgba(102, 252, 241, 0.5);
+  border-bottom: 0.1vw solid rgba(102, 252, 241, 0.5);
   font-size: 1.5vw;
   width: 25vw;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.step h1, .bookhead{
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding: 0.5vw;
+  margin: 2vw 1vw 1vw 1vw;
+  border-bottom: 0.2vw solid #66FCF1;
+  transition: 0.5s;
+}
+
+.step h1:hover, .bookhead:hover{
+  background-color: #66FCF1;
+  color: #1F2833;
+  margin: 2vw 0 1vw 0;
+}
+
+.step .document{
+  text-decoration: none;
+  display: block;
+  width: 85vw;
+  margin-left: 10vw;
+  font-size: 1.25vw;
+  padding: 0.5vw;
+  transition: 0.5s;
+}
+
+.step .document:hover{
+  background-color: white;
+  color: #1F2833;
+}
+
+.project, .learn{
+  width: 80vw;
+  height: 45vw;
+  margin: 1vw 8vw;
+  transition: 0.5s;
+}
+
+.project:hover, .learn:hover{
+  box-shadow: #66FCF1 0 0 2vw 0.2vw;
+}
+
+.steplist{
+  display: inline-block;
+  width: 78vw;
+  text-align: left;
+  margin: 1vw 10vw;
+}
+
+.steplist li{
+  color: #1F2833;
+  list-style-type:square;
+  padding: 1vw;
+  padding-right: 4vw;
+  margin-bottom: 0.5vw;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 1.3vw;
+  background-color: #66FCF1;
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+  border-top-right-radius: 5vw;
+  border-bottom-right-radius: 5vw;
 }
