--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,65 @@
-body{
-  background: url('../public/otherImages/bg.jpg');
+body {
+  background: url("../public/otherImages/bg.jpg");
   background-repeat: no-repeat;
   background-size: auto 1000vh;
   padding-bottom: 5vw;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #66FCF1;
+  color: #66fcf1;
 }
 
-
-.navbar{
+.navbar {
   display: grid;
-  grid-template-columns: 1fr 1fr ;
-  padding: 0vw 0vw 1vw 0vw; 
+  grid-template-columns: 1fr 1fr;
+  padding: 0vw 0vw 1vw 0vw;
 }
 
-.pages{
+.pages {
   text-decoration: none;
-  color: #66FCF1;
-  font-family:monospace;
+  color: #66fcf1;
+  font-family: monospace;
   font-size: 1.75vw;
   padding: 1vw;
   width: 10vw;
   text-align: center;
   align-items: center;
-  background-image: linear-gradient(to right, rgba(102, 252, 241, 0), rgba(102, 252, 241, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(102, 252, 241, 0),
+    rgba(102, 252, 241, 0)
+  );
   transition: 1s;
   font-weight: bold;
 }
 
-.navbar .navlogo .pages:hover{
-  background-image: linear-gradient(to left, rgba(102, 252, 241, 0.2), rgba(102, 252, 241, 1));
-  color: #1F2833;
+.navbar .navlogo .pages:hover {
+  background-image: linear-gradient(
+    to left,
+    rgba(102, 252, 241, 0.2),
+    rgba(102, 252, 241, 1)
+  );
+  color: #1f2833;
 }
 
-.navbar .pages:hover{
-  background-image: linear-gradient(to right, rgba(102, 252, 241, 0.2), rgba(102, 252, 241, 1));
-  color: #1F2833;
+.navbar .pages:hover {
+  background-image: linear-gradient(
+    to right,
+    rgba(102, 252, 241, 0.2),
+    rgba(102, 252, 241, 1)
+  );
+  color: #1f2833;
 }
 
-.navbar .navlogo{
+.navbar .navlogo {
   margin: 1vw;
   text-align: right;
 }
 
-.payhead{
+.payhead {
   width: 50vw;
   height: 10vw;
   margin: 10vw 25vw;
@@ -59,7 +70,7 @@ body{
   background-color: rgb(83, 200, 83);
 }
 
-.form{
+.form {
   display: flex;
   flex-direction: column;
   height: 24vw;
@@ -68,21 +79,22 @@ body{
   padding: 2vw;
 }
 
-.form button, .demoTitle{
-  background-color: #66FCF1;
-  color: #1F2833;
+.form button,
+.demoTitle {
+  background-color: #66fcf1;
+  color: #1f2833;
   font-size: 1.25vw;
-  border: 0.1vw solid #66FCF1;
+  border: 0.1vw solid #66fcf1;
   margin-top: 2vw;
   font-weight: bolder;
   margin-left: 12vw;
   width: 10vw;
   padding: 0.5vw;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   transition: 0.5s;
 }
 
-.demoTitle{
+.demoTitle {
   margin: 4vw 34vw 0 34vw;
   display: inline-block;
   width: 30vw;
@@ -93,54 +105,59 @@ body{
   border-radius: 1vw;
 }
 
-.form button:hover, .demoTitle:hover{
-  background-color: #1F2833;
-  color: #66FCF1;
-  border: 0.1vw solid #66FCF1;
-  box-shadow: #66FCF1 0 0 3vw 0.2vw;
+.form button:hover,
+.demoTitle:hover {
+  background-color: #1f2833;
+  color: #66fcf1;
+  border: 0.1vw solid #66fcf1;
+  box-shadow: #66fcf1 0 0 3vw 0.2vw;
 }
 
-.form div{
+.form div {
   margin: 1vw;
 }
 
-.form div span{
+.form div span {
   display: inline-block;
   width: 7vw;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-size: 1.5vw;
 }
 
-.form div input{
+.form div input {
   background-color: rgba(120, 120, 120, 0.1);
   padding: 1vw;
   border: 0;
   border-bottom: 0.1vw solid rgba(102, 252, 241, 0.5);
   font-size: 1.5vw;
   width: 25vw;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.step h1, .bookhead{
+.step h1,
+.bookhead {
   text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   padding: 0.5vw;
   margin: 2vw 1vw 1vw 1vw;
-  border-bottom: 0.2vw solid #66FCF1;
+  border-bottom: 0.2vw solid #66fcf1;
   transition: 0.5s;
 }
 
-.step h1:hover, .bookhead:hover{
-  background-color: #66FCF1;
-  color: #1F2833;
+.step h1:hover,
+.bookhead:hover {
+  background-color: #66fcf1;
+  color: #1f2833;
   margin: 2vw 0 1vw 0;
 }
 
-.bookhead{
+.bookhead {
   margin-top: 0vw !important;
 }
 
-.step .document{
+.step .document {
   text-decoration: none;
   display: block;
   width: 85vw;
@@ -150,54 +167,59 @@ body{
   transition: 0.5s;
 }
 
-.step .document:hover{
+.step .document:hover {
   background-color: white;
-  color: #1F2833;
+  color: #1f2833;
 }
 
-.project, .learn{
+.project,
+.learn {
   width: 80vw;
   height: 45vw;
   margin: 1vw 8vw;
   transition: 0.5s;
 }
 
-.project:hover, .learn:hover{
-  box-shadow: #66FCF1 0 0 2vw 0.2vw;
+.project:hover,
+.learn:hover {
+  box-shadow: #66fcf1 0 0 2vw 0.2vw;
 }
 
-.steplist{
+.steplist {
   display: inline-block;
   width: 78vw;
   text-align: left;
   margin: 1vw 10vw;
 }
 
-.steplist li{
-  color: #1F2833;
-  list-style-type:square;
+.steplist li {
+  color: #1f2833;
+  list-style-type: square;
   padding: 1vw;
   padding-right: 4vw;
   margin-bottom: 0.5vw;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-size: 1.3vw;
-  background-color: #66FCF1;
+  background-color: #66fcf1;
   border-top: 1px solid red;
   border-bottom: 1px solid red;
   border-top-right-radius: 5vw;
   border-bottom-right-radius: 5vw;
 }
 
-#parallax{
+#parallax {
   width: 95vw;
   height: 30vw;
-  background-image: url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-3.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);
+  background-image: url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-3.png),
+    url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png),
+    url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
 }
 
-#parallax h1{
+#parallax h1 {
   text-align: center;
   padding: 11vw;
   font-size: 5vw;
@@ -207,19 +229,19 @@ body{
   font-weight: bold;
 }
 
-.intro{
+.intro {
   display: flex;
   flex-direction: row;
   height: 16vw;
 }
 
-.intro img{
+.intro img {
   width: 30vw;
   padding: 0;
   filter: invert(100%);
 }
 
-.intro p{
+.intro p {
   font-size: 1.5vw;
   margin: 7vw 2vw 0 0;
   height: 1.75vw;
@@ -231,73 +253,233 @@ body{
   content: "...";
   position: absolute;
   font-size: 2vw;
-  color: #66FCF1;
-  bottom: -5vw; 
-  right: 2vw; 
-  visibility: visible; 
+  color: #66fcf1;
+  bottom: -5vw;
+  right: 2vw;
+  visibility: visible;
 }
 
 .intro p:hover::after {
   visibility: hidden;
 }
 
-.intro p:hover{
+.intro p:hover {
   height: 15vw;
-  margin: 2vw 2vw 0 0 ;
+  margin: 2vw 2vw 0 0;
 }
 
-.item{
+.item {
   display: block;
   display: flex;
   margin-bottom: 1vw;
-  background-color: #1F2833;
+  background-color: #1f2833;
   color: transparent;
 }
 
-.item:hover > .special{
+.item:hover > .special {
   color: white;
 }
 
-.item:hover{
+.item:hover {
   background-color: #7f7f7f;
 }
 
-.item img{
+.item img {
   display: inline-block;
   height: 10vw;
-  margin: 1vw ;
+  margin: 1vw;
 }
 
-.item div{
+.item div {
   display: inline-block;
   width: 80vw;
   text-decoration: none;
   font-size: 1.35vw;
   text-align: center;
   padding: 4vw 0vw 0vw 0vw;
-  color: #66FCF1;
+  color: #66fcf1;
 }
 
-.up{
+.up {
   position: fixed;
   bottom: 3vw;
   right: 3vw;
   padding: 0.5vw 1vw;
-  background-color: #1F2833;
-  color: #66FCF1;
+  background-color: #1f2833;
+  color: #66fcf1;
   text-decoration: none;
   transition: 0.5s;
   font-size: 2vw;
   border-radius: 1vw;
 }
 
-.up:hover{
-  color: #1F2833;
-  background-image: linear-gradient(to left, rgba(102, 252, 241, 0.2), rgba(102, 252, 241, 1));
+.up:hover {
+  color: #1f2833;
+  background-image: linear-gradient(
+    to left,
+    rgba(102, 252, 241, 0.2),
+    rgba(102, 252, 241, 1)
+  );
 }
 
-.form button:disabled{
+.form button:disabled {
   background-color: #89a4a2;
   font-weight: 100;
   color: grey;
+}
+
+@media only screen and (max-width: 800px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    height: 70vw;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .intro img {
+    width: 500px;
+    filter: invert(100%);
+  }
+
+  .intro p {
+    font-size: 3vw;
+    margin: 0vw 2vw 1vw 2vw;
+    height: 40vw;
+    transition: 2s;
+    overflow: hidden;
+  }
+
+  .intro p::after {
+    content: "...";
+    position: absolute;
+    font-size: 2vw;
+    color: #66fcf1;
+    bottom: 0vw;
+    right: 2vw;
+    visibility: hidden;
+  }
+
+  .intro p:hover::after {
+    visibility: hidden;
+  }
+
+  .intro p:hover {
+    height: 40vw;
+    margin: 0 2vw 1vw 2vw;
+  }
+  .step h1,
+.bookhead {
+  text-align: center;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 0.5vw;
+  margin: 2vw 1vw 1vw 1vw;
+  border-bottom: 0.2vw solid #66fcf1;
+  transition: 0.5s;
+  font-size: 5vw;
+}
+
+.new{
+  margin-top: 15vw !important;
+}
+
+.pages {
+  font-size: 4vw;
+  padding: 1vw;
+  width: 20vw;
+  text-align: center;
+  align-items: center;
+  background-image: linear-gradient(
+    to right,
+    rgba(102, 252, 241, 0),
+    rgba(102, 252, 241, 0)
+  );
+  transition: 1s;
+  font-weight: bold;
+}
+
+.list{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1vw;
+  height: 80vw;
+  overflow:auto;
+  background-color: #1f2833;
+  justify-content: center;
+  align-items: center;
+  margin: 2vw;
+  color: transparent;
+}
+
+.item img {
+  width: 40vw;
+  height: 20vw;
+  margin: 1vw;
+}
+
+.item div {
+  display: inline-block;
+  margin: 0 2vw;
+  width: 40vw;
+  text-decoration: none;
+  font-size: 3vw;
+  text-align: center;
+  padding: 4vw 0vw 0vw 0vw;
+  color: #66fcf1;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  height: 24vw;
+  width: 80vw;
+  margin: 6vw 10vw;
+  padding: 2vw;
+}
+
+.form button{
+  margin: 10vw 15vw;
+  font-size: 4vw;
+  width: 40vw;
+  padding: 1.5vw;
+}
+
+.demoTitle{
+  font-size: 4vw;
+  width: 60vw;
+  padding: 1.5vw;
+  margin: 5vw 18vw;
+}
+
+.form div {
+  margin: 5vw 1vw;
+}
+
+.form div span {
+  width: 20vw;
+  font-size: 3vw;
+}
+
+.form div input {
+  font-size: 3vw;
+  width: 50vw;
+}
+
+
+.payhead {
+  width: 100vw;
+  height: 15vw;
+  margin: 20vw 0vw;
+  font-size: 5vw;
+  color: white;
+  padding: 5vw 0vw;
+  text-align: center;
+  background-color: rgb(83, 200, 83);
+}
+
 }
